RESOLVED FIXED12069
Hit detection fails under some viewbox constraints
https://bugs.webkit.org/show_bug.cgi?id=12069
Summary Hit detection fails under some viewbox constraints
Nicholas Shanks
Reported 2007-01-02 06:13:38 PST
The example at the given URL fails as it is, but works if you change the width to 600 and height to 500.
Attachments
First attempt (12.73 KB, patch)
2007-01-13 13:38 PST, Rob Buis
eric: review+
Rob Buis
Comment 1 2007-01-13 13:38:31 PST
Created attachment 12421 [details] First attempt This should fix the overflow clip test in svg containers. Cheers, Rob.
Eric Seidel (no email)
Comment 2 2007-01-15 01:47:37 PST
Comment on attachment 12421 [details] First attempt Looks sane.
Rob Buis
Comment 3 2007-01-15 04:47:13 PST
Landed in r18858.
Note You need to log in before you can comment on or make changes to this bug.