        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=12069
        Hit detection fails under some viewbox constraints

        Do not take viewBox into account when hit testing svg container.



Canonical link: https://commits.webkit.org/15862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18858 268f45cc-cd09-0410-ab3c-d52691b4dbfc